node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  labels:
    app: node-app
spec:
  ports:
    - port: 5002
      targetPort: 5002
      name: http-query
  type: ClusterIP
  selector:
    app: node-app
