react-service1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  selector:
    app: service1
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
