test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
#    nginx.org/websocket-services: "websocket-app-service"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: service1-service
          servicePort: 80
#      - path: /socket.io
#        backend:
#          serviceName: websocket-app-service
#          servicePort: 80
